add endpoint valdate, modify project

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,15 @@
-__pychache__/
-*.py[cod]
-*.egg-info/
-.env
-.venv/
-*.log
-.DS_Store
-.vscode/
-__pypackages__/
-*.sqllite3
+app/*/__pycache__/
+app/__pycache__/
+tests/*/__pycache__/
+tests/__pycache__/
+
+
 reports/
-metadata/
 datasets/
 profiles/
-app/__pycache__/
-sample.csv
+metadatas/
+files/
+.pytest_cache/
+.venv/
+
+.env
