--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,10 @@ pandas
 pandera
 pytest
 dotenv
-ydata-profiling
+ydata-profiling==4.7.0
 setuptools
+fastapi
+uvicorn
+python-multipart
+openpyxl
+fastparquet
