--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 app/*/__pycache__/
+app/api/*/__pycache__/
 app/__pycache__/
 tests/*/__pycache__/
 tests/__pycache__/
@@ -13,3 +14,5 @@ files/
 .venv/
 
 .env
+
+*.pyc
