--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
-pandas
-pandera
-pytest
-dotenv
+pandas==2.3.0
+pandera==0.24.0
+pytest==8.4.1
+dotenv==0.9.9
 ydata-profiling==4.7.0
-setuptools
-fastapi
-uvicorn
-python-multipart
-openpyxl
-fastparquet
+setuptools==80.9.0
+fastapi==0.115.14
+uvicorn==0.35.0
+python-multipart==0.0.20
+openpyxl==3.1.5
+fastparquet==2024.11.0
+loguru==0.7.3
