--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
 pandas==2.3.0
-pandera==0.24.0
 pytest==8.4.1
 dotenv==0.9.9
 ydata-profiling==4.7.0
@@ -10,3 +9,4 @@ python-multipart==0.0.20
 openpyxl==3.1.5
 fastparquet==2024.11.0
 loguru==0.7.3
+httpx==0.28.1
