--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 pandas==2.3.0
 pytest==8.4.1
-dotenv==0.9.9
+python-dotenv
 ydata-profiling==4.7.0
-setuptools==80.9.0
 fastapi==0.115.14
 uvicorn==0.35.0
 python-multipart==0.0.20
@@ -10,3 +9,4 @@ openpyxl==3.1.5
 fastparquet==2024.11.0
 loguru==0.7.3
 httpx==0.28.1
+pytest-cov
