--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,31 +1,19 @@
-# .pre-commit-config.yaml
 repos:
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v4.4.0
+    hooks:
+      - id: trailing-whitespace  # Elimina espacios al final
+      - id: end-of-file-fixer    # Asegura una línea al final
+      - id: check-yaml           # Valida archivos YAML
+
   - repo: https://github.com/psf/black
-    rev: 24.4.2
+    rev: 23.10.1
     hooks:
       - id: black
+        language_version: python3.12  # Usa tu versión de Python
 
-  - repo: https://github.com/pre-commit/mirrors-isort
-    rev: v5.10.1
+  - repo: https://github.com/PyCQA/isort
+    rev: 5.12.0
     hooks:
       - id: isort
-
-  - repo: https://github.com/pycqa/flake8
-    rev: 7.0.0
-    hooks:
-      - id: flake8
-
-  - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.10.0
-    hooks:
-      - id: mypy
-        args: ["--ignore-missing-imports"]
-
-# Opcional: Descomentar para correr tests antes de cada commit
-#  - repo: local
-#    hooks:
-#      - id: run-pytest
-#        name: Run Pytest
-#        entry: pytest
-#        language: system
-#        types: [python]
+        name: isort (python)
